--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
     <h1>belom jadi ya bang sabar</h1>
-    <p>mega cantik.</p>
+    <p>mega cantik sama tobrut.</p>
 </body>
+
 </html>
